fix sponsors on narrow screens

--- a/_sass/layout.scss
+++ b/_sass/layout.scss
@@ -638,6 +638,11 @@ img.iconTop {
 	}
 }
 
+@media only screen and (max-width: 992px) {
+	.sponsors .sponsor {
+		width: 100%;
+	}
+}
 
 
 // Footer
